fix function getColor()

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
     <p id="text3">Text 3</p>
     <script type="module" src="./js/module.js"></script>
     <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./tests/module.test.js"></script>
   </body>
 </html>
