Сhanged the section-homes using JS

--- a/index.html
+++ b/index.html
@@ -320,7 +320,8 @@
       <div class="container">
         <h2 class="title">Homes guests loves</h2>
 
-        <div class="slider__items">
+        <div id="slider" class="slider__items ">
+
           <div class="right-arrow">
             <button class="slider__btn">
               <svg
@@ -339,55 +340,7 @@
             </button>
           </div>
 
-          <div class="slider__item col-lg-4 col-md-4 col-xs-3">
-            <img
-              class="slider__img col-lg-12"
-              src="./src/img/hotels-section/hotels.jpg"
-              alt="hotels"
-            />
-            <div class="slider__descr">
-              <div class="slider__descr-header">Hotel Leopold</div>
-              <div class="slider__descr-text">Saint Petersburg, Russia</div>
-            </div>
-          </div>
 
-          <div class="slider__item col-lg-4 col-md-4 col-xs-3">
-            <img
-              class="slider__img col-lg-12"
-              src="./src/img/hotels-section/apartment.jpg"
-              alt="apartment"
-            />
-            <div class="slider__descr">
-              <div class="slider__descr-header">Apartment Sunshine</div>
-              <div class="slider__descr-text">
-                Santa Cruz de Tenerife, Spain
-              </div>
-            </div>
-          </div>
-
-          <div class="slider__item col-lg-4 col-md-4 col-xs-3">
-            <img
-              class="slider__img col-lg-12"
-              src="./src/img/hotels-section/villa.jpg"
-              alt="villa"
-            />
-            <div class="slider__descr">
-              <div class="slider__descr-header">Villa Kunerad</div>
-              <div class="slider__descr-text">Vysokie Tatry, Slowakia</div>
-            </div>
-          </div>
-
-          <div class="slider__item col-lg-4 col-md-4 col-xs-3">
-            <img
-              class="slider__img col-lg-12"
-              src="./src/img/hotels-section/hostel.jpg"
-              alt="hostels"
-            />
-            <div class="slider__descr">
-              <div class="slider__descr-header">Hostel Friendship</div>
-              <div class="slider__descr-text">Berlin, Germany</div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -706,5 +659,7 @@
         </strong>
       </div>
     </footer>
+
+    <script type="module" src="./src/js/homes.js"></script>
   </body>
 </html>
