Added sessionStorage for section-homes

--- a/index.html
+++ b/index.html
@@ -169,7 +169,12 @@
         <form class="search">
           <div class="search__input search__input--width-hotel column">
             <label for="hotel-name">Your destination or hotel name</label>
-            <input class="serch--height" type="text" name="search" id="hotel-name" />
+            <input
+              class="serch--height"
+              type="text"
+              name="search"
+              id="hotel-name"
+            />
           </div>
           <div class="column">
             <label for="check-name">Check-in — Check-out</label>
@@ -257,7 +262,13 @@
             </div>
           </div>
 
-          <button id="btn-search" type="button" class="serch__btn serch--height gr-xs-4">Serch</button>
+          <button
+            id="btn-search"
+            type="button"
+            class="serch__btn serch--height gr-xs-4"
+          >
+            Serch
+          </button>
           <!-- <button id="btn-search-test" type="button" class="serch__btn serch--height gr-xs-4">Serch Test</button> -->
         </form>
 
@@ -355,8 +366,7 @@
     <!-- house search -->
     <section id="search-homes" class="homes deactive">
       <div class="container">
-        <div id="slider-search" class="slider__items slider__items-el">
-        </div>
+        <div id="slider-search" class="slider__items slider__items-el"></div>
       </div>
     </section>
 
