--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
       </div>
     </footer>
 
-    <script type="module" src="./src/js/homes.js"></script>
-    <script type="module" src="./src/js/top-section.js"></script>
+    <script type="module" src="./src/js/sectiom-homes/homes.js"></script>
+    <script type="module" src="./src/js/top-section/top-section.js"></script>
   </body>
 </html>
