--- a/src/index_Js.html
+++ b/src/index_Js.html
@@ -11,6 +11,7 @@
     <p id="text3">Text 3</p>
     <script type="module" src="./js/other-lessons/main.js"></script>
     <script type="module" src="./js/other-lessons/module.js"></script>
+    <script type="module" src="./js/other-lessons/steck.js"></script>
     <script type="module" src="./tests/module.test.js"></script>
   </body>
 </html>
